# Qt_with_v4l2

./: CMakeLists.txt  Main.qml  READEME.md  Test.code-workspace  VideoProvider.h  albumwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mywidget.h  qml.qrc  queue_.h  rec.qrc  toolchain.txt  v4l2_video.cpp  v4l2_video.h
